1/5 some minor fixes including min-height for sliding dashboard panel and added language align to all core components - which now containg an inner div wrapper for padding

--- a/src/app/core/atms/atms.component.scss
+++ b/src/app/core/atms/atms.component.scss
@@ -1,3 +1,7 @@
-:host {
+.qsm_self{text-align: center}
 
+:host {
+  .wrapper {
+    padding-right:135px !important;
+  }
 }
