--- a/src/app/core/hsm/hsm.component.scss
+++ b/src/app/core/hsm/hsm.component.scss
@@ -1,5 +1,7 @@
+.qsm_self{text-align: center}
+
 :host {
   .wrapper {
-    padding:25px;
+    padding:25px 25px 135px 25px;
   }
 }
