--- a/src/styles/helpers/_form-components.scss
+++ b/src/styles/helpers/_form-components.scss
@@ -1,48 +1,50 @@
 @import "./src/styles/helpers/brand";
 
-
 .search-wrapper {
   position: relative;
   display: inline-block;
-  font-size:18px;
+  font-size: 18px;
+  input[type=text] {
+    width: 100%;
+  }
   &:before {
     content: "\F002";
     position: absolute;
     top: calc(50% - 9px;);
     right: 10px;
-    color:$botti;
+    color: $botti;
     display: inline-block;
     font: normal normal normal 14px/1 FontAwesome;
     font-size: inherit;
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
   }
-  input[type=text] {
-    width:100%;
-    border-radius: 15px;
-    padding: 0 10px;
-    outline: none;
-    box-shadow: none;
-    border: 1px solid $botti;
-    height: 30px;
-    line-height: 30px;
+}
+
+input[type=text] {
+  border-radius: 15px;
+  padding: 0 10px;
+  outline: none;
+  box-shadow: none;
+  border: 1px solid $botti;
+  height: 30px;
+  line-height: 30px;
+  font-size: 0.9285714rem !important; //fs13 for REM14
+  .placeholder-settings {
     font-size: 0.9285714rem !important; //fs13 for REM14
-    .placeholder-settings {
-      font-size: 0.9285714rem !important; //fs13 for REM14
-      color: $botti;
-    }
-    &::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-      @extend .placeholder-settings;
-    }
-    &::-moz-placeholder { /* Firefox 19+ */
-      @extend .placeholder-settings;
-    }
-    &:-ms-input-placeholder { /* IE 10+ */
-      @extend .placeholder-settings;
-    }
-    &:-moz-placeholder { /* Firefox 18- */
-      @extend .placeholder-settings;
-    }
+    color: $botti;
+  }
+  &::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+    @extend .placeholder-settings;
+  }
+  &::-moz-placeholder { /* Firefox 19+ */
+    @extend .placeholder-settings;
+  }
+  &:-ms-input-placeholder { /* IE 10+ */
+    @extend .placeholder-settings;
+  }
+  &:-moz-placeholder { /* Firefox 18- */
+    @extend .placeholder-settings;
   }
 }
 
