--- a/src/styles/overrides/_ng-sidebar-overrides.scss
+++ b/src/styles/overrides/_ng-sidebar-overrides.scss
@@ -4,6 +4,7 @@
   overflow: visible !important;
   //position: relative;
   height:80% !important;
+  min-height: 615px !important;
   top:10% !important;
   border: 2px solid $ber-gray;
   border-right:none;
